...
                                    Image(systemName: "xmark")
                                        .resizable()
                                        .frame(width: 10, height: 10)
                                        .darkLightThemeColor()
                                }
                            })
                            .accessibilityIdentifier("DismissEditSingleRowSheetButtonIdentifier")
                        }
                        .padding([.horizontal, .top], 16)
                        .padding(.bottom, 8)
                    }
                HStack(alignment: .top) {
                    if let title = viewModel.tableDataModel.title {
...
